/up sse endpoint mechanics working
